Fixed a couple of minor layout issues

--- a/webapp/src/main/webapp/assets/stylesheets/biostudies_common_10.css
+++ b/webapp/src/main/webapp/assets/stylesheets/biostudies_common_10.css
@@ -61,6 +61,10 @@ background-color: white;
 p.intro {
     font-size: 108%;
 }
+
+p.justify {
+    text-align: justify;
+}
 /* I'm redefining the EBI css because its the easy way to put the backgroud white*/
 
 
